# agentic-brain

./: .coverage  .dockerignore  .env.dev.example  .env.docker.example  .env.example  .env.prod.example  .env.test.example  .gitignore  .pre-commit-config.yaml  ADL_TESTS_README.md  AGENTS_FRAMEWORK_VERIFICATION.txt  AGENTS_IMPLEMENTATION_SUMMARY.md  AGENTS_QUICK_REFERENCE.md  API_DOCUMENTATION_COMPLETE.md  API_DOCUMENTATION_SUMMARY.txt  API_ERGONOMICS_IMPROVEMENTS.md  API_QUICK_REFERENCE.md  API_SECURITY_IMPLEMENTATION.md  ARCHITECTURE_REVIEW.md  AUDIT_REPORT.md  AUTOSTART.md  AUTOSTART_TECHNICAL.md  BRAINCHAT_PIPELINE_INDEX.md  BRAINCHAT_RELEASE_GUIDE.md  BULLETPROOF_INFRASTRUCTURE.md  CHANGELOG.md  CI_CD_REPORT.md  CI_FIX_SUMMARY.md  CLAUDE.md  CLEANUP_REPORT_2026-03-26.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_INDEX.md  CLOCK_SERVER_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  CONSISTENCY_REPORT.md  CONSOLIDATION_COMPLETE.md  CONTRIBUTING.md  CONTRIBUTING_REGIONS.md  COPYRIGHT.md  CROSS_PLATFORM_VOICE_SUMMARY.md  (+139 more)
.do/: app.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: A11Y_IMPLEMENTATION_GUIDE.md  ACCESSIBILITY_TESTING.md  IMPLEMENTATION_CHECKLIST.md  README.md  adl.yml  brainchat-build.yml  brainchat-master.yml  brainchat-release.yml  brainchat-security-test.yml  brainchat-test.yml  brainchat.yml  cd.yml  ci.yml  demo.yml  (+17 more)
.test-results/: stage1.txt
config/: timezone.yaml
demo/: COMPLETION_REPORT.md  DEMO_SUMMARY.md  Dockerfile.api  Dockerfile.wordpress  QUICKSTART.md  README.md  START_HERE.md  TROUBLESHOOTING.md  cleanup-demo.sh  docker-compose.demo.yml  entrypoint.sh  setup-demo.sh  verify-demo.sh  wp-config-docker.php
docker/: docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml
docs/: ACCESSIBILITY.md  ADL.md  ADL_ENTITIES.md  AGENTS.md  AGENT_SECURITY.md  AGI_LEVEL_ASSESSMENT.md  AI_NATIVE.md  API.md  API_ACCESS_CONTROL.md  API_DOCS_SUMMARY.md  API_REFERENCE.md  API_SECURITY.md  ARRAZ2000_COMPATIBILITY.md  ASYNC_GUIDE.md  AUTHENTICATION.md  BENCHMARKING.md  BENCHMARKS.md  BENCHMARKS_INDEX.md  BENCHMARK_QUICK_REFERENCE.md  BENCHMARK_REGRESSION_TRACKING.md  BRAINCHAT_INTEGRATION.md  CHANGELOG.md  CHUNKING.md  CI_CD.md  CI_IMPLEMENTATION_PLAN.md  CI_STATUS.md  CI_STRATEGY.md  CLI_USAGE.md  CLOCK.md  COMMERCE_API.md  COMMERCE_CHATBOT.md  COMMUNITY_RAG_SPECIFICATION.md  COMPLIANCE.md  COMPREHENSIVE-AUDIT-REPORT.md  CONNECTORS.md  CONTRIBUTING_REGIONS.md  CROSS_PLATFORM_VOICE.md  DATA_LOADERS.md  DEPENDENCIES.md  DEPENDENCY_SECURITY.md  (+155 more)
examples/: 00_kitchen_sink.py  README.md  __init__.py  analytics_example.py  api_quick_start.py  api_security_demo.py  brain.adl  chat_with_memory.py  clock_server_example.py  custom_plugin_example.py  demo_cross_platform_voice.py  infrastructure_example.py  minimal.adl  orchestration_examples.py  rag_chat.py  regional_voice_demo.py  simple_chat.py  streaming_chat.py  unified_brain_demo.py  woocommerce_quickstart.py
firebase/: .firebaserc
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
launchd/: com.agentic-brain.backup.plist  com.agentic-brain.daemon.plist  com.agentic-brain.health.plist
mcp-servers/: __init__.py
mcp-servers/brain-data/: README.md  pyproject.toml  server.py
mcp-servers/neo4j-backup/: README.md  pyproject.toml  server.py
scripts/: WINDOWS-AUTOSTART-README.md  a11y-test.sh  agent_coordination.py  check_docker_env.sh  check_imports.py  check_license_headers.py  com.agentic-brain.infra-daemon.plist  delegate_llm.py  deploy-local.sh  ensure_redis.py  export_openapi.py  generate_security_report.py  infra-daemon.sh  install-autostart-linux.sh  install-autostart-mac.sh  install-autostart-windows.bat  install-autostart-windows.ps1  launchd-manager.py  migrate_to_topic_graph.py  publish.sh  publish_ethics_audit.py  quarterly-audit.py  reproduce_issue.py  run-benchmark.py  setup-infrastructure.sh  setup-keys.ps1  setup-keys.sh  setup.sh  setup_kokoro.py  start-all.sh  start_josephs_brain.sh  voice.py
sdk/python/: pyproject.toml
sdk/python/agentic_brain/: __init__.py  client.py
sdk/python/agentic_brain/agents/: __init__.py
sdk/python/agentic_brain/chat/: __init__.py  terminal.py
sdk/python/agentic_brain/llm/: __init__.py
sdk/python/agentic_brain/voice/: __init__.py
templates/: README.md  aussie_default.yaml  budget_zero.yaml  business_standard.yaml  developer.yaml  llm-aussie-default.env  llm-budget-zero.env  llm-business-standard.env  llm-developer.env  llm-privacy-first.env  llm-speed-demon.env  privacy_first.yaml  speed_demon.yaml
tests/: INTEGRATION_TESTS.md  QUICK_START.md  README_TESTS.md  README_TEST_CHAT.md  TEST_CHAT_SUMMARY.md  TEST_INSTALLER_README.md  TEST_VOICE_NO_OVERLAP_README.md  TRANSPORT_TEST_QUICK_REF.md  TRANSPORT_TEST_REPORT.md  __init__.py  conftest.py  conftest.py.old  test___main__.py  test__monolith_backup.py  test__neo4j_memory.py  test_activity.py  test_activity_timeouts.py  test_address_validation.py  test_address_validation_plugin.py  test_adl.py  test_adl_comprehensive_parser_only.py  test_adl_jhipster.py  test_agent.py  test_airpods.py  test_airpods_detect.py  test_analytics.py  test_answer_similarity_large_texts.py  test_answer_similarity_reproducible.py  test_answer_similarity_thresholds.py  test_answer_similarity_unicode.py  test_anthropic.py  test_api.py  test_api_key_auth.py  test_api_response.py  test_api_server.py  test_app.py  test_async_completion.py  test_audio.py  test_audit.py  test_australian.py  (+427 more)
tools/: MicCaptureCLI  MicCaptureCLI.swift  MicPermission.swift  MicRequestApp.last_run.json  MicRequestApp.m  MicRequestApp.swift  VoiceCapture.swift  VoiceToText.swift  build_mic_app.sh  copilot_voice_bridge.py  karen_chat.py  mic_permission_OLD_broken  mic_permission_manager.py  mic_permission_pyobjc.py  mic_tcc_diagnostic.py  screencapture_mic_trigger.sh  terminal_mic_capture.sh  validation_terminal_rec.stdout  voice_chat.py  voice_event_bus.py  voice_orchestrator.py  voice_reasoning.py  voice_topics.py
(+3348 files in other folders)
