[project]
name = "agentic-brain"
version = "2.21.0"
description = "Enterprise-grade AI Agent Platform. Production-ready orchestration with GraphRAG, Multi-LLM support, and 155+ RAG loaders. Python, GPU-accelerated, Secure."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Joseph Webber", email = "joseph.webber@me.com"}
]
keywords = [
    "ai",
    "agents",
    "agentic",
    "llm",
    "rag",
    "graphrag",
    "knowledge-graph",
    "neo4j",
    "chatbot",
    "ai-framework",
    "ai-agents",
    "ai-platform",
    "ollama",
    "openai",
    "anthropic",
    "claude",
    "gpt",
    "embeddings",
    "vector-database",
    "semantic-search",
    "gpu-acceleration",
    "apple-silicon",
    "mlx",
    "cuda",
    "multi-tenant",
    "enterprise",
    "saas",
    "accessibility",
    "production-ready",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Database :: Database Engines/Servers",
    "Framework :: FastAPI",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.9.0,<4.0.0",  # Required for LLM API calls (Ollama, OpenRouter)
    "PyYAML>=6.0.0,<7.0.0",  # Centralized YAML configuration loading
    "questionary>=2.0.0,<3.0.0",  # Interactive CLI prompts (new-config wizard)
    "pyttsx3>=2.90",  # Cross-platform TTS (Windows/Linux)
    "gTTS>=2.5.0",    # Google TTS (free cloud fallback)
    "typer>=0.9.0,<0.10.0",  # Pin older version for Python 3.14 compatibility
    "click>=8.0.0",
    "numpy>=1.24.0,<3.0.0",  # Core numerical computations
    "scipy>=1.11.0,<2.0.0",  # Earcon waveform rendering
    "firebase-admin>=6.0.0,<7.0.0",  # Firebase auth, Firestore, RTDB, and Storage
    "temporalio>=1.4.0,<2.0.0",  # Durable workflow execution
]

[project.optional-dependencies]
voice-kokoro = [
    "kokoro>=0.9.2",
    "soundfile>=0.12.1",
    "huggingface-hub>=0.29.0",
]
voice-cloning = [
    "f5-tts",
]
# Enhanced integrations bundle
enhanced = [
    "mem0ai>=0.1.0",
    "neo4j-graphrag>=1.14.1,<2.0.0",
    "chonkie>=1.0.0",
]
# Production memory integrations
memory = [
    "mem0ai>=0.1.0",
]
doc-parsing = [
    "agentic-brain[documents]",
]
graphrag = [
    "neo4j-graphrag>=1.14.1,<2.0.0",
]
chunking = [
    "chonkie>=1.0.0",
]
# Documentation generator
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0.0,<11.0.0",
]
cloud_docs = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "msal>=1.24.0",
    "msgraph-sdk>=1.0.0",
    "azure-identity>=1.14.0",
]
# Async file operations
files = [
    "aiofiles>=23.0.0,<25.0.0",
]
# Secure secrets management (macOS Keychain, etc.)
secrets = [
    "keyring>=24.0.0,<26.0.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-timeout>=2.1.0,<3.0.0",  # Prevent hanging tests
    "pytest-xdist>=3.5.0,<4.0.0",  # Parallel test execution
    "aioredis>=2.0.1,<3.0.0",
    "black==24.10.0",
    "build>=1.0.0,<2.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.3.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",  # For database loader tests
    "playwright>=1.40.0",
    "httpx>=0.25.0,<1.0.0",  # For TestClient
    "fastapi>=0.104.0,<1.0.0",  # API + transport tests
    "PyJWT>=2.8.0,<3.0.0",  # Tests import jwt
    "fakeredis>=2.19.0,<3.0.0",  # For Redis mocking
    "mongomock>=4.1.0,<5.0.0",  # For MongoDB mocking
    "responses>=0.25.0,<1.0.0",  # For HTTP mocking
    "numpy>=1.24.0,<3.0.0",  # For RAG/ADL tests needing numpy
    # PDF Processing
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "pypdfium2>=4.30.0",
]
# Alias for dev (commonly used for CI)
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-timeout>=2.1.0,<3.0.0",  # Prevent hanging tests
    "pytest-xdist>=3.5.0,<4.0.0",  # Parallel test execution
    "aioredis>=2.0.1,<3.0.0",
    "build>=1.0.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",  # For database loader tests
    "pydantic-settings>=2.0.0,<3.0.0",  # For config tests
    "passlib>=1.7.4,<2.0.0",  # For auth tests
    "python-jose[cryptography]>=3.3.0,<4.0.0",  # For JWT auth tests
    "PyJWT>=2.8.0,<3.0.0",  # Tests import jwt
    "fastapi>=0.104.0,<1.0.0",  # API + transport tests
    "starlette>=0.27.0,<1.0.0",  # For observability and audit tests
    "uvicorn[standard]>=0.24.0,<1.0.0",  # API server tests
    "firebase-admin>=6.0.0,<7.0.0",  # Firebase transport tests
    "numpy>=1.24.0,<3.0.0",  # RAG tests
    "docker>=7.0.0,<8.0.0",  # For infrastructure tests
    "httpx>=0.25.0,<1.0.0",  # For TestClient
    "fakeredis>=2.19.0,<3.0.0",  # For Redis mocking
    "mongomock>=4.1.0,<5.0.0",  # For MongoDB mocking
    "responses>=0.25.0,<1.0.0",  # For HTTP mocking
    "neo4j>=5.14.0,<6.0.0",  # For Neo4j pool and CI connectivity tests
    "redis>=5.0.0,<6.0.0",  # Tests import redis directly
    "requests>=2.28.0,<3.0.0",  # RAG/LLM tests import requests directly
    "PyYAML>=6.0.0,<7.0.0",  # Loader and governance tests import yaml directly
]
api = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",  # JHipster-style configuration profiles
    "python-multipart>=0.0.6,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "websockets>=12.0.0,<14.0.0",
]
llm = [
    "openai>=1.0.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "requests>=2.28.0,<3.0.0",
]
firebase = [
    "firebase-admin>=6.0.0,<7.0.0",
]
auth = [
    "python-jose[cryptography]>=3.3.0,<4.0.0",
]
# Enterprise auth: LDAP/Active Directory, SAML, MFA
enterprise = [
    "ldap3>=2.9.0,<3.0.0",
    "python3-saml>=1.15.0,<2.0.0",
    "pyotp>=2.9.0,<3.0.0",
]
redis = [
    "redis>=5.0.0,<6.0.0",
]
observability = [
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0,<1.0.0",
    "opentelemetry-exporter-jaeger>=1.20.0,<2.0.0",
    "opentelemetry-exporter-zipkin>=1.20.0,<2.0.0",
    "starlette>=0.27.0,<1.0.0",  # Used by observability tests
]
vectordb = [
    "pinecone>=3.0.0,<4.0.0",
    "weaviate-client>=4.0.0,<5.0.0",
    "qdrant-client>=1.7.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
]
# RAG embeddings (sentence-transformers for local, requests for API-based)
embeddings = [
    "sentence-transformers>=2.2.0,<3.0.0",
    "torch>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
]
# Apple Silicon MLX acceleration
mlx = [
    "mlx>=0.5.0,<1.0.0",
    "numpy>=1.24.0,<3.0.0",
]
# Fast chunking (Chonkie - 33x faster RAG preprocessing)
chonkie = [
    "chonkie>=1.0.0",
]
chonkie-semantic = [
    "chonkie[semantic]>=1.0.0",
]
explainability = [
    "shap>=0.42.0,<1.0.0",
    "lime>=0.2.0.1,<1.0.0",
    "langdetect>=1.0.9",
    "lingua-language-detector>=1.3.2",
]
finetuning = [
    "peft>=0.7.0,<1.0.0",
    "transformers>=4.36.0,<5.0.0",
    "datasets>=2.16.0,<3.0.0",
]
# PDF Processing - Core
pdf = [
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "pypdfium2>=4.30.0",
]
# PDF Processing - OCR (includes GPU support)
pdf-ocr = [
    "easyocr>=1.7.0",
    "rapidocr-onnxruntime>=1.4.0",
]
# PDF Processing - Writing/Generation
pdf-write = [
    "reportlab>=4.0.0",
    "borb>=2.1.0",
]
# PDF Processing - Full suite
pdf-full = [
    "agentic-brain[pdf,pdf-ocr,pdf-write]",
]
# Document Processing - All formats
documents = [
    "agentic-brain[pdf-full]",
    "ebooklib>=0.18",
    "python-pptx>=0.6.23",
    "python-docx>=1.0.0",
    "odfpy>=1.4.0",
    "docx2pdf>=0.1.8",  # DOCX to PDF conversion (Windows/macOS)
    "mammoth>=1.6.0",   # DOCX to HTML/Markdown conversion
    "openpyxl>=3.1.0",  # Excel spreadsheet operations
    "striprtf>=0.0.26",
]
xml = [
    "lxml>=4.9.0",
]
# Office document processing
office = [
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "odfpy>=1.4.0",
    "striprtf>=0.0.26",
    "mammoth>=1.6.0",
]
# Security - PII detection and redaction
security = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
# Accessibility - Alt-text generation and image analysis
accessibility = [
    "Pillow>=10.0.0",  # Image processing
    "numpy>=1.24.0,<3.0.0",  # Numerical operations
    "langdetect>=1.0.9",  # Language detection for tagging
    "lingua-language-detector>=1.3.2",  # Optional higher-accuracy detector
]
# Accessibility with MLX (Apple Silicon optimized)
accessibility-mlx = [
    "agentic-brain[accessibility]",
    "mlx>=0.5.0,<1.0.0",
]
# Accessibility with BLIP (best quality)
accessibility-blip = [
    "agentic-brain[accessibility]",
    "transformers>=4.36.0,<5.0.0",
    "torch>=2.0.0,<3.0.0",
]
# Accessibility - Full suite (all backends)
accessibility-full = [
    "agentic-brain[accessibility,accessibility-mlx,accessibility-blip]",
]
# Ebook Processing (EPUB + MOBI/AZW)
ebook = [
    "ebooklib>=0.18",
    "mobi>=0.3.1",
]
# Print Processing - Preflight and production
print = [
    "Pillow>=10.0.0",  # Image color space conversion
]
all = [
    "agentic-brain[enhanced]",
    # Memory
    "neo4j>=5.14.0,<6.0.0",
    "aiofiles>=23.0.0,<25.0.0",
    "keyring>=24.0.0,<26.0.0",
    # API
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "requests>=2.28.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "websockets>=12.0.0,<14.0.0",
    "firebase-admin>=6.0.0,<7.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "redis>=5.0.0,<6.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0,<1.0.0",
    "numpy>=1.24.0,<3.0.0",
    "pinecone>=3.0.0,<4.0.0",
    "weaviate-client>=4.0.0,<5.0.0",
    "qdrant-client>=1.7.0,<2.0.0",
    "shap>=0.42.0,<1.0.0",
    "lime>=0.2.0.1,<1.0.0",
    # Enterprise
    "ldap3>=2.9.0,<3.0.0",
    "pyotp>=2.9.0,<3.0.0",
    # PDF Processing
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "pypdfium2>=4.30.0",
    "easyocr>=1.7.0",
    "rapidocr-onnxruntime>=1.4.0",
    "reportlab>=4.0.0",
    "borb>=2.1.0",
    # Document Processing
    "ebooklib>=0.18",
    "python-pptx>=0.6.23",
    "python-docx>=1.0.0",
    "odfpy>=1.4.0",
    "openpyxl>=3.1.0",
    "striprtf>=0.0.26",
    "mammoth>=1.6.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "msal>=1.24.0",
    "msgraph-sdk>=1.0.0",
    "azure-identity>=1.14.0",
    "lxml>=4.9.0",
]

[project.scripts]
agentic-brain = "agentic_brain.cli:main"
agentic = "agentic_brain.cli:main"
ab = "agentic_brain.cli:main"

[project.urls]
Homepage = "https://github.com/joseph-webber/agentic-brain"
Repository = "https://github.com/joseph-webber/agentic-brain"
Documentation = "https://github.com/joseph-webber/agentic-brain/blob/main/docs/INDEX.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentic_brain*"]

[tool.setuptools.package-data]
"agentic_brain.audio" = [
    "native/*.swift",
    "native/*.m",
    "native/*.cpp",
    "earcons/*.wav",
    "sounds/*.wav",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "B904", "SIM102", "SIM105", "SIM113", "SIM117", "N802", "N801", "N813", "N815", "E741", "F401", "E402", "B017", "B024", "B027", "UP035", "UP045", "B028", "UP006", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N803", "N806", "F403", "F405", "B007", "B905", "F841"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short --strict-markers"
timeout = 60
markers = [
    "accessibility: Accessibility-focused tests for document processing",
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may need services)",
    "e2e: End-to-end tests (full system)",
    "gpu: Tests that require GPU acceleration or hardware detection",
    "commerce: Commerce and storefront tests",
    "woocommerce: WooCommerce-specific tests",
    "wordpress: WordPress-specific tests",
    "slow: Slow tests (skip in CI by default)",
    "skip_ci: Skip in CI environment",
    "requires_redis: Requires Redis server to be running",
    "requires_neo4j: Requires Neo4j database to be running",
    "requires_temporal: Requires Temporal service to be running",
    "requires_docker: Requires Docker to be running",
    "requires_firebase: Requires Firebase emulator",
    "docker: Tests that require Docker",
    "asyncio: Async tests (provided by pytest-asyncio)",
]
filterwarnings = ["ignore::DeprecationWarning"]
