[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-brain-sdk"
version = "0.1.0"
description = "Python SDK for Agentic Brain orchestration"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0,<1.0.0",
]

[project.optional-dependencies]
chat = [
    "rich>=13.0.0,<15.0.0",
]

[tool.setuptools.packages.find]
include = ["agentic_brain*"]
